--- a/app/src/main/res/menu/menu_editor.xml
+++ b/app/src/main/res/menu/menu_editor.xml
@@ -9,4 +9,9 @@
         android:title="@string/action_save"
         app:showAsAction="always" />
 
+    <item
+        android:id="@+id/action_delete_entry"
+        android:title="@string/action_delete_this_entry"
+        app:showAsAction="never" />
+
 </menu>
