--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,11 +8,17 @@
     android:paddingTop="@dimen/gen_padding"
     tools:context=".MainActivity">
 
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/list_view"
+        />
+
     <TextView
-        android:id="@+id/books"
+        android:id="@+id/empty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:text="@string/empty_message" />
     <!-- Image under public domain - see http://www.iconarchive.com/show/small-n-flat-icons-by-paomedia/book-icon.html -->
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
