--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -112,5 +112,11 @@
             android:inputType="phone"/>
     </LinearLayout>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/order_now"
+        android:text="@string/order_button"/>
+
 
 </LinearLayout>
